<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dip"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

	<LinearLayout 
	    android:orientation="vertical"
	    android:padding="10dp"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" 
	    android:background="#555533" >
	    <EditText android:id="@+id/etUserName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:singleLine="true" 
	        android:hint="@string/prompt_input" />
	
	    <Button android:id="@+id/btnSubmit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/submit" />
	</LinearLayout>
	
	<LinearLayout 
	    android:orientation="vertical"
	    android:padding="10dp"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" 
	    android:background="#553355" >
		<TextView
	        android:id="@+id/tvAnim"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginBottom="10dp"	
	        android:textSize="20sp"        
	        android:text="@string/anim_text"/>
	
	    <Spinner
	        android:id="@+id/spInter"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:layout_marginTop="10dp"
	        android:layout_marginBottom="10dp" 
	        android:entries="@array/iters"/>
	</LinearLayout>	
	
	<LinearLayout 
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:background="#335555" >	
	    <ViewFlipper android:id="@+id/fpText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:flipInterval="1500"
	        android:layout_marginTop="10dp"
	        android:layout_marginBottom="10dp" >
            <TextView
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal"
		        android:textSize="20sp"        
	            android:text="@string/anim_text1"/>
            <TextView
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal"
		        android:textSize="20sp"        
	            android:text="@string/anim_text2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
		        android:textSize="20sp"        
                android:text="@string/anim_text3"/>
	    </ViewFlipper>
	
	    <Spinner android:id="@+id/spAnim"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:layout_marginTop="10dp"
	        android:layout_marginBottom="10dp" 
	        android:entries="@array/anims" />
	</LinearLayout>
</LinearLayout>
